fix script file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 		<link href="./style.css" rel="stylesheet" type="text/css">
 		<script src="./bower_components/angular/angular.min.js"></script>
-		<script src="./double-progress.directive.min.js"></script>
+		<script src="./bower_components/angular-d3-double-progress/double-progress.directive.min.js"></script>
 		<script>
 				var app = angular.module("demoapp", ['double-progress.directive']);
 		</script>
